--- a/index.html
+++ b/index.html
@@ -136,13 +136,13 @@
       <span class="text">
 	<!--  <p style="margin-top: 0px; margin-bottom: 16px;"> -->
 	<p>
-	  These songs were produced using <b>Audovia</b>, a music making application with up to fifteen instrumental voices and a percussion track.
+	  <b>Audovia</b> is a music making application for classical musicians.&nbsp; Up to fifteen instrumental voices and a percussion track can be used.
 	  <!--&nbsp;
 	  See <a class="nounderline" href="https://songbase.github.io/doc/AudoviaDocumentation-4-0.pdf"
 	         target="_blank" rel="noopener noreferrer">Documentation</a>.-->
 	  </p>
 	  <p>
-	  Click on a song to play or pause and double-click to rewind.
+	  Click on one of the samples to play or pause and double-click to rewind.
 	  </p>
 <!--	  <p>&nbsp;
 	  </p> -->
