--- a/index.html
+++ b/index.html
@@ -141,8 +141,8 @@
 	  See <a class="nounderline" href="https://songbase.github.io/doc/AudoviaDocumentation-4-0.pdf"
 	         target="_blank" rel="noopener noreferrer">Documentation</a>.-->
 	  </p>
-	  <p>
-	  Click on one of the samples to play or pause and double-click to rewind.
+	  <p style="margin-left: -20px;">
+	  &larr; click on one of the samples to play or pause and double-click to rewind.
 	  </p>
 <!--	  <p>&nbsp;
 	  </p> -->
