--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
    <h1><strong>Audovia Classic</strong></h1>
     <div style="position: relative; top: -14px;">
-    <h2><em>Music Making application for Classical Musicians</em></h2>
+    <h2><em>Making Music for Classical Musicians</em></h2>
     </div>
 
    <div style="position: absolute; left: 50%; margin-left: -486px; top: 36px;">
