--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
 <div style="position: absolute; top: 0px; width: 100%; height: 140px;">
 
-   <h1><strong>Audovia Classic</strong></h1>
+<!--   <h1><strong>Audovia Classic</strong></h1>
     <div style="position: relative; top: -14px;">
     <h2><em>Making Music for Classical Musicians</em></h2>
     </div>
@@ -53,7 +53,7 @@
 				                alt="Audovia Icon" src="image/SongBuilderColourIcon74.png"
                 style="border: 0px solid;">
                 </a>
-    </div>
+    </div>  -->
 
     <!--<div style="position: absolute; left: 50%; margin-left: 414px; top: 36px;">
                 <a href="https://github.com/SongBase/Audovia" target="_blank" rel="noopener noreferrer">
@@ -93,11 +93,11 @@
 </a>
 </div>-->
 
-<!--<div style="position: absolute; left: 50%; margin-left: -486px; top: 135px;">
-<img src="image/sm_Sydney_Opera2.jpg" alt="Sydney Opera House" height="214" width="972">
-</div>-->
+<div style="position: absolute; left: 50%; margin-left: -486px; top: 0px;">
+<img src="image/sm_Sydney_Opera_hero_scaled.png" alt="Sydney Opera House" height="324" width="972">
+</div>
 
-    <div style="position: absolute; left: 50%; margin-left: -494px; top: 152px;">
+    <div style="position: absolute; left: 50%; margin-left: -494px; top: 352px;">
 
       <iframe style="border-style: none;" src="playlist.html" height="340" width="440"></iframe>
 
@@ -132,7 +132,7 @@
 
     </div>-->
 
-    <div style="width: 530px; background-color: #ffffff;  margin-left: -48px; position: absolute; top: 148px; left: 50%;  border: 8px solid white;">
+    <div style="width: 530px; background-color: #ffffff;  margin-left: -48px; position: absolute; top: 348px; left: 50%;  border: 8px solid white;">
       <span class="text">
 	<!--  <p style="margin-top: 0px; margin-bottom: 16px;"> -->
 	<p>
@@ -260,7 +260,7 @@
     </div>
 
 <!--<div align="center" style="width: 968px; margin: auto; position: absolute; top: 655px; left: 0px; right: 0px;">-->
-<div style="width: 968px; margin: auto; position: absolute; top: 505px; left: 0px; right: 0px;">
+<div style="width: 968px; margin: auto; position: absolute; top: 705px; left: 0px; right: 0px;">
 <video width="686" height="514" controls style="float: left; margin-right: 25px;">
   <source src="media/QuickStart.mp4" type="video/mp4">
 
@@ -289,7 +289,7 @@ The songs here were produced by opening the WAV files in <a class="nounderline" 
 </span>
 </div>
 
-    <div align="center" style="width: 968px; margin: auto; position: absolute; top: 1055px; left: 0px; right: 0px;">
+    <div align="center" style="width: 968px; margin: auto; position: absolute; top: 1255px; left: 0px; right: 0px;">
 
       <span class="footer">
       <em>
