--- a/index.html
+++ b/index.html
@@ -141,21 +141,31 @@
 	  See <a class="nounderline" href="https://songbase.github.io/doc/AudoviaDocumentation-4-0.pdf"
 	         target="_blank" rel="noopener noreferrer">Documentation</a>.-->
 	  </p>
-	  <p style="margin-left: -20px;">
+	  <p style="margin-left: -20px; margin-bottom: 20px;">
 	  &larr; click on one of the samples to play or pause and double-click to rewind.
 	  </p>
 <!--	  <p>&nbsp;
 	  </p> -->
 	  <div align="center">
-	  <p style="margin-top: 16px; margin-bottom: 18px;">
+	  <p style="margin-top: 6px; margin-bottom: 18px; float: left;">
 
 	  <a href="https://snapcraft.io/audovia-classic"
 	          style="text-decoration:none;" target="_blank" rel="noopener noreferrer">
-	       <button type="button" style="background-color:#e0e0e0; width:240px; padding:5px; cursor:pointer; color:#551A8B;">
+	       <button type="button" style="background-color:#e0e0e0; width:240px; padding:5px; cursor:pointer; color:#551A8B; margin-top: -6px;">
 	               <font style="font-family: Open Sans; font-size: 15px;"><b>Install Audovia on Linux</b>
 	               </font>
 	       </button>
       </a>
+
+
+<form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+<input type="hidden" name="cmd" value="_s-xclick" />
+<input type="hidden" name="hosted_button_id" value="GVABA73MP8PCA" />
+<input type="image" src="https://www.paypalobjects.com/en_GB/i/btn/btn_donate_LG.gif" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button" />
+<img alt="" border="0" src="https://www.paypal.com/en_GB/i/scr/pixel.gif" width="1" height="1" />
+</form>
+
+
 
       <!--
 
@@ -179,7 +189,7 @@
 	  from any other soundbank of your choice.
 	  </p>-->
 	 <!-- <p style="margin-top: 0px; margin-bottom: 20px;"> -->
-	 <p>
+	 <p style="clear: both;">
 	  <b>Audovia</b> is great for making background music for videos or backing tracks for playing or singing along to.&nbsp;
 	  Even <a class="nounderline" href="https://drive.google.com/drive/folders/1A1MdhX_gnX7xYDk90ybHfZzugBut22m4?usp=sharing" target="_blank" rel="noopener noreferrer">ringtones</a> for your mobile phone.
 	  </p>
@@ -250,6 +260,7 @@
 	               </font>
 	       </button>
       </a>
+      <!--
       &nbsp;&nbsp;&nbsp;&nbsp;
 	  <a href="https://groups.io/g/audovia/topics"
 	          style="text-decoration:none;" target="_blank" rel="noopener noreferrer">
@@ -258,7 +269,7 @@
 	               </font>
 	       </button>
       </a>
-
+      -->
 	  </p>
 	  </div>
 
@@ -304,7 +315,7 @@ The songs here were produced by opening the WAV files in <a class="nounderline" 
 	            We encourage you to read the privacy notices on the other websites you visit.
 	            <br>
           <br>
-          Copyright &copy; 2017 - 2019&nbsp;&nbsp; <a class="nounderline" href="https://songbase.github.io/mywebsite/" target="_blank" rel="noopener noreferrer">Donald G Gray</a></em><br><br>&nbsp;
+          Copyright &copy; 2017 - 2020&nbsp;&nbsp; <a class="nounderline" href="https://songbase.github.io/mywebsite/" target="_blank" rel="noopener noreferrer">Donald G Gray</a></em><br><br>&nbsp;
       </span>
 
     </div>
