--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta content="text/html; charset=UTF-8" http-equiv="Content-Type">
-    <title lang="en-gb">Audovia Classic</title>
+    <title lang="en-gb">Audovia Music</title>
     <link href="favicon.ico" rel="icon" type="image/x-icon">
 
     <link rel="stylesheet"
@@ -17,7 +17,7 @@
     <meta property="og:image:width" content="686">
     <meta property="og:image:height" content="385">
     <meta property="og:type" content="website">
-    <meta property="og:title" content="Audovia Classic">
+    <meta property="og:title" content="Audovia Music">
     <meta property="og:description" content="Music Making application for Classical Musicians">
     <meta property="og:url" content="https://songbase.github.io/">
 
@@ -42,7 +42,7 @@
 
 <div style="position: absolute; top: 0px; width: 100%; height: 140px;">
 
-<!--   <h1><strong>Audovia Classic</strong></h1>
+<!--   <h1><strong>Audovia Music</strong></h1>
     <div style="position: relative; top: -14px;">
     <h2><em>Making Music for Classical Musicians</em></h2>
     </div>
@@ -94,7 +94,7 @@
 </div>-->
 
 <div style="position: absolute; left: 50%; margin-left: -486px; top: 0px;">
-<img src="image/sm_Sydney_Opera_hero_scaled.png" alt="Sydney Opera House" height="324" width="972">
+<img src="image/sm_Sydney_Opera_banner_scaled.png" alt="Sydney Opera House" height="324" width="972">
 </div>
 
     <div style="position: absolute; left: 50%; margin-left: -494px; top: 352px;">
