--- a/index.html
+++ b/index.html
@@ -157,20 +157,20 @@
 	       </button>
       </a>
 
-
+<div style="position: absolute; left: 50%; margin-left: 130px; top: -325px;">
 <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
 <input type="hidden" name="cmd" value="_s-xclick" />
 <input type="hidden" name="hosted_button_id" value="GVABA73MP8PCA" />
 <input type="image" src="https://www.paypalobjects.com/en_GB/i/btn/btn_donate_LG.gif" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button" />
 <img alt="" border="0" src="https://www.paypal.com/en_GB/i/scr/pixel.gif" width="1" height="1" />
 </form>
+</div>
 
 
 
-      <!--
 
       &nbsp;&nbsp;&nbsp;&nbsp;
-	  <a href="https://sourceforge.net/projects/songbuilder/files/Audovia-4-0-1.msi/download"
+	  <a href="https://github.com/SongBase/Audovia/releases/download/v4.01/Audovia-4-0-1.msi"
 	          style="text-decoration:none;" target="_blank" rel="noopener noreferrer">
 	       <button type="button" style="background-color:#e0e0e0; width:240px; padding:5px; cursor:pointer; color:#551A8B;">
 	               <font style="font-family: Open Sans; font-size: 15px;"><b>Install Audovia on Windows</b>
@@ -178,7 +178,7 @@
 	       </button>
       </a>
 
-      -->
+
 
 	  </p>
 	  </div>
