--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
       span.footer {color: #555555; font-family: Open Sans; font-size: 14px; line-height: 1.3;}
       span.text-black {color: #000000; font-family: Open Sans; font-size: 15px; line-height: 1.3;}
       span.text {color: #555555; font-family: Open Sans; font-size: 15px; line-height: 1.3;}
+      span.text-white {color: #ffffff; font-family: Open Sans; font-size: 15px; line-height: 1.3;}
       span.caption {color: #551A8B;  font-family: Open Sans; font-size: 16px;}
       li:not(:last-child) {margin-bottom: 8px;}
       p {margin-top: 0px; margin-bottom: 12px;}
@@ -166,7 +167,13 @@
 </form>
 </div>
 
-
+<!--<div align="left" style="position: absolute; left: 50%; margin-left: -12px; top: -292px;">
+<span class="text-white">
+<p><em>
+Please donate to help cover costs.
+</em></p>
+</span>
+</div>-->
 
 
       &nbsp;&nbsp;&nbsp;&nbsp;
@@ -313,7 +320,8 @@ The songs here were produced by opening the WAV files in <a class="nounderline" 
                 We do not collect personal information on this website.&nbsp;
 	            Where we provide links to websites of other organisations, this privacy notice does not cover how that organisation processes personal information.&nbsp;
 	            We encourage you to read the privacy notices on the other websites you visit.
-	            <br>
+	            <br><br>
+	            All donations go towards the development, maintenance and distribution of Audovia.<br>
           <br>
           Copyright &copy; 2017 - 2020&nbsp;&nbsp; <a class="nounderline" href="https://songbase.github.io/mywebsite/" target="_blank" rel="noopener noreferrer">Donald G Gray</a></em><br><br>&nbsp;
       </span>
