--- a/index.html
+++ b/index.html
@@ -158,6 +158,7 @@
 	       </button>
       </a>
 
+<!--
 <div style="position: absolute; left: 50%; margin-left: 130px; top: -325px;">
 <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
 <input type="hidden" name="cmd" value="_s-xclick" />
@@ -166,6 +167,7 @@
 <img alt="" border="0" src="https://www.paypal.com/en_GB/i/scr/pixel.gif" width="1" height="1" />
 </form>
 </div>
+-->
 
 <!--<div align="left" style="position: absolute; left: 50%; margin-left: -12px; top: -292px;">
 <span class="text-white">
@@ -320,8 +322,8 @@ The songs here were produced by opening the WAV files in <a class="nounderline" 
                 We do not collect personal information on this website.&nbsp;
 	            Where we provide links to websites of other organisations, this privacy notice does not cover how that organisation processes personal information.&nbsp;
 	            We encourage you to read the privacy notices on the other websites you visit.
-	            <br><br>
-	            All donations go towards the development, maintenance and distribution of Audovia.<br>
+	            <br><!--<br>
+	            All donations go towards the development, maintenance and distribution of Audovia.<br>-->
           <br>
           Copyright &copy; 2017 - 2020&nbsp;&nbsp; <a class="nounderline" href="https://songbase.github.io/mywebsite/" target="_blank" rel="noopener noreferrer">Donald G Gray</a></em><br><br>&nbsp;
       </span>
