--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 <!--	  <p>&nbsp;
 	  </p> -->
 	  <div align="center">
-	  <p style="margin-top: 6px; margin-bottom: 18px; float: left;">
+	  <p style="margin-top: 6px; margin-bottom: 18px;">
 
 	  <a href="https://snapcraft.io/audovia-classic"
 	          style="text-decoration:none;" target="_blank" rel="noopener noreferrer">
@@ -260,7 +260,7 @@ Please donate to help cover costs.
 
 
 	  <div align="center">
-	  <p style="margin-top: 30px; margin-bottom: 18px;">
+	  <p style="margin-top: 20px; margin-bottom: 18px;">
 
 	  <a href="https://songbase.github.io/doc/AudoviaDocumentation-4-0.pdf"
 	          style="text-decoration:none;" target="_blank" rel="noopener noreferrer">
@@ -269,16 +269,16 @@ Please donate to help cover costs.
 	               </font>
 	       </button>
       </a>
-      <!--
+
       &nbsp;&nbsp;&nbsp;&nbsp;
-	  <a href="https://groups.io/g/audovia/topics"
+	  <a href="https://github.com/SongBase/Audovia/discussions"
 	          style="text-decoration:none;" target="_blank" rel="noopener noreferrer">
 	       <button type="button" style="background-color:#e0e0e0; width:240px; padding:5px; cursor:pointer; color:#551A8B;">
 	               <font style="font-family: Open Sans; font-size: 15px;"><b>Audovia Discussion Group</b>
 	               </font>
 	       </button>
       </a>
-      -->
+
 	  </p>
 	  </div>
 
