--- a/index.html
+++ b/index.html
@@ -257,9 +257,9 @@
 	  </p>
 	  <p>
 	  -->
-	  The quality of your music will depend on your choice of instrument for each voice and your choice of soundbank.&nbsp; One good soundbank is available <a class="nounderline" href="https://drive.google.com/folderview?id=0B8XyJFPN233fbmY3WFhMT3djc1E&usp=sharing"
+	  The quality of your music will depend on your choice of instrument for each voice and your choice of soundbank.<!--&nbsp; One good soundbank is available <a class="nounderline" href="https://drive.google.com/folderview?id=0B8XyJFPN233fbmY3WFhMT3djc1E&usp=sharing"
       target="_blank" rel="noopener noreferrer">here</a> and there are more at <a class="nounderline" href="https://sites.google.com/site/soundfonts4u/"
-      target="_blank" rel="noopener noreferrer">Soundfonts 4U</a>.
+      target="_blank" rel="noopener noreferrer">Soundfonts 4U</a>.-->
 	  </p>
 
 	  <!--<p>
