--- a/playlist.html
+++ b/playlist.html
@@ -37,9 +37,9 @@
     '{ "composer":"J S Bach"    , "song":"Sheep May Safely Graze"        , "mp3":"SheepMaySafelyGraze.mp3"                    } ,' +
     '{ "composer":"W A Mozart"  , "song":"Recordare"                     , "mp3":"Recordare.mp3"                              } ,' +
     '{ "composer":"A Vivaldi"   , "song":"Gloria"                        , "mp3":"Gloria-Vivaldi-v3R.mp3"                     } ,' +
-    //'{ "composer":"G F Handel"  , "song":"Zadok the Priest"              , "mp3":"zadok.mp3"                                  } ,' +
-    //'{ "composer":"G F Handel"  , "song":"Arrival of the Queen of Sheba" , "mp3":"The Arrival of the Queen of Sheba-Song.mp3" } ,' +
-    //'{ "composer":"G F Handel"  , "song":"Messiah 1 Sinfony"             , "mp3":"Messiah 1 Sinfony-Song.mp3"                 } ,' +
+    '{ "composer":"G F Handel"  , "song":"Zadok the Priest"              , "mp3":"zadok.mp3"                                  } ,' +
+    '{ "composer":"G F Handel"  , "song":"Arrival of the Queen of Sheba" , "mp3":"The Arrival of the Queen of Sheba-Song.mp3" } ,' +
+    '{ "composer":"G F Handel"  , "song":"Messiah 1 Sinfony"             , "mp3":"Messiah 1 Sinfony-Song.mp3"                 } ,' +
     '{ "composer":"C Petzold"   , "song":"Minuet in G"                   , "mp3":"Minuet in G - Christian Petzold-Song.mp3"   } ,' +
     '{ "composer":"C Nairne"    , "song":"The Hundred Pipers"            , "mp3":"The Hundred Pipers-Song.mp3"                } ,' +
     '{ "composer":"S Joplin"    , "song":"The Entertainer"               , "mp3":"The Entertainer.mp3"                        }  ' +
