--- a/index.html
+++ b/index.html
@@ -273,7 +273,16 @@
 
 
 	  <div align="center">
-	  <p style="margin-top: 20px; margin-bottom: 18px;">
+	      <p style="margin-top: 32px; margin-bottom: 18px;">
+	      <span class="text"> <hr style="height:1px;border-width:0;color:grey;background-color:grey">
+	      <a href="https://www.facebook.com/audovia" style="text-decoration:none;" target="_blank" rel="noopener noreferrer"><b>Facebook Page</b></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+	      <a href="https://www.youtube.com/channel/UCzEo99Tp8H87jUdYh9acs5Q" style="text-decoration:none;" target="_blank" rel="noopener noreferrer"><b>YouTube Channel</b></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+<!--	      <a href="https://www.facebook.com/groups/pipetunes" style="text-decoration:none;" target="_blank" rel="noopener noreferrer">Audovia Documentation</a>&nbsp;&nbsp;&nbsp; -->
+	      <a href="https://songbase.github.io/doc/AudoviaDocumentation-4-0.pdf" style="text-decoration:none;" target="_blank" rel="noopener noreferrer"><b>Audovia Documentation</b></a>
+	      <hr style="height:1px;border-width:0;color:grey;background-color:grey">
+          </span>
+          </p>
+<!--	  <p style="margin-top: 20px; margin-bottom: 18px;">
 
 	  <a href="https://songbase.github.io/doc/AudoviaDocumentation-4-0.pdf"
 	          style="text-decoration:none;" target="_blank" rel="noopener noreferrer">
@@ -292,7 +301,7 @@
 	       </button>
       </a>
 
-	  </p>
+	  </p> -->
 	  </div>
 
       </span>
@@ -338,7 +347,7 @@ The songs here were produced by opening the WAV files in <a class="nounderline" 
 	            <br><!--<br>
 	            All donations go towards the development, maintenance and distribution of Audovia.<br>-->
           <br>
-          Copyright &copy; 2017 - 2020&nbsp;&nbsp; <a class="nounderline" href="https://songbase.github.io/mywebsite/" target="_blank" rel="noopener noreferrer">Donald G Gray</a></em><br><br>&nbsp;
+          Copyright &copy; 2017 - 2021&nbsp;&nbsp; <a class="nounderline" href="https://songbase.github.io/mywebsite/" target="_blank" rel="noopener noreferrer">Donald G Gray</a></em><br><br>&nbsp;
       </span>
 
     </div>
