--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-2QVVZPSL4S"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-2QVVZPSL4S');
+</script>
     <meta content="text/html; charset=UTF-8" http-equiv="Content-Type">
     <title lang="en-gb">Audovia Music</title>
     <link href="favicon.ico" rel="icon" type="image/x-icon">
