--- a/index.html
+++ b/index.html
@@ -350,9 +350,9 @@ The songs here were produced by opening the WAV files in <a class="nounderline" 
 
       <span class="footer">
       <em>
-                We do not collect personal information on this website.&nbsp;
+                <!--We do not collect personal information on this website.&nbsp;
 	            Where we provide links to websites of other organisations, this privacy notice does not cover how that organisation processes personal information.&nbsp;
-	            We encourage you to read the privacy notices on the other websites you visit.
+	            We encourage you to read the privacy notices on the other websites you visit.-->
 	            <br><!--<br>
 	            All donations go towards the development, maintenance and distribution of Audovia.<br>-->
           <br>
