--- a/demonstration.html
+++ b/demonstration.html
@@ -43,24 +43,26 @@
 
 <div style="width: 968px; margin: auto; position: absolute; top: 0px; left: 0px; right: 0px;">
 <video width="686" height="514" controls style="float: left; margin-right: 25px;">
-  <source src="media/Joy-To-The-World.mp4" type="video/mp4">
+  <source src="media/audovia-demo.mp4" type="video/mp4">
 
   Your browser does not support the video tag.
 </video>
 <span class="text">
 <p>
 <!--<br>-->
-The video shows the song<br>"Joy to the World" being created from a template.
-</p>
-
-<p>
-The notes are specified by their name and octave, and their durations are specified either by a character code or by a numeric value.
+The video shows a selection of songs being being played back from the <b>Songs</b> menu.
 </p>
 <p>
-They are entered here by picking from the graphic Treble stave within the MusicString editor.
+Songs are created using JFugue notation in the MusicString editor.
 </p>
 <p>
-When complete, you can export songs to MIDI and WAV files for input to music processing and music publishing applications.
+Notes are specified by their name and octave, and their durations are specified either by a character code or by a numeric value.
+</p>
+<p>
+Notes can be entered manually or by picking from graphic Treble, Alto, Tenor and Bass staves within the MusicString editor.
+</p>
+<p>
+You can export songs to MIDI and WAV files for input to music processing and music publishing applications.
 </p>
 <p>
 The songs here were produced by opening the WAV files in <a class="nounderline" href="https://www.audacityteam.org/" target="_blank" rel="noopener noreferrer">Audacity</a> and then exporting to MP3.
@@ -72,8 +74,8 @@ The songs here were produced by opening the WAV files in <a class="nounderline" 
     <div align="center" style="width: 972px; position: relative; left: 50%; margin-left: -486px; top: 530px;">
     <span class="text">
     <a href="quickstart.html" style="text-decoration:none;">Quick Start</a>&nbsp;&nbsp;&nbsp;
-    <a href="tutorial.html" style="text-decoration:none;"><b>Tutorial</b></a>&nbsp;&nbsp;&nbsp;
-    <a href="demonstration.html" style="text-decoration:none;">Demonstration</a>
+    <a href="tutorial.html" style="text-decoration:none;">Tutorial</a>&nbsp;&nbsp;&nbsp;
+    <a href="demonstration.html" style="text-decoration:none;"><b>Demonstration</b></a>
 
     </span>
     </div>
