--- a/index.html
+++ b/index.html
@@ -318,15 +318,17 @@
 
 <!--<div align="center" style="width: 968px; margin: auto; position: absolute; top: 655px; left: 0px; right: 0px;">-->
 <div style="width: 968px; margin: auto; position: absolute; top: 705px; left: 0px; right: 0px;">
-<video width="686" height="514" controls style="float: left; margin-right: 25px;">
+
+<iframe style="border-style: none;" src="quickstart.html" height="620" width="972" name="myiframe">
+<!--<video width="686" height="514" controls style="float: left; margin-right: 25px;">
   <source src="media/QuickStart.mp4" type="video/mp4">
 
   Your browser does not support the video tag.
 </video>
 <span class="text">
-<p>
+<p>-->
 <!--<br>-->
-The video shows a song being imported from an archive file.
+<!--The video shows a song being imported from an archive file.
 </p>
 <p>
 The structure of the song is displayed as a tree view before it is played back using the default soundbank.
@@ -343,7 +345,11 @@ You can export songs to MIDI and WAV files for input to music processing and mus
 <p>
 The songs here were produced by opening the WAV files in <a class="nounderline" href="https://www.audacityteam.org/" target="_blank" rel="noopener noreferrer">Audacity</a> and then exporting to MP3.
 </p>
-</span>
+</span>-->
+</iframe>
+
+
+
 </div>
 
     <div align="center" style="width: 968px; margin: auto; position: absolute; top: 1255px; left: 0px; right: 0px;">
