--- a/quickstart.html
+++ b/quickstart.html
@@ -43,24 +43,26 @@
 
 <div style="width: 968px; margin: auto; position: absolute; top: 0px; left: 0px; right: 0px;">
 <video width="686" height="514" controls style="float: left; margin-right: 25px;">
-  <source src="media/Joy-To-The-World.mp4" type="video/mp4">
+  <source src="media/QuickStart.mp4" type="video/mp4">
 
   Your browser does not support the video tag.
 </video>
 <span class="text">
 <p>
 <!--<br>-->
-The video shows the song<br>"Joy to the World" being created from a template.
+The video shows a song being imported from an archive file.
 </p>
-
+<p>
+The structure of the song is displayed as a tree view before it is played back using the default soundbank.
+</p>
 <p>
 The notes are specified by their name and octave, and their durations are specified either by a character code or by a numeric value.
 </p>
 <p>
-They are entered here by picking from the graphic Treble stave within the MusicString editor.
+Notes can be entered manually or by picking from graphic Treble, Alto, Tenor and Bass staves within the MusicString editor.
 </p>
 <p>
-When complete, you can export songs to MIDI and WAV files for input to music processing and music publishing applications.
+You can export songs to MIDI and WAV files for input to music processing and music publishing applications.
 </p>
 <p>
 The songs here were produced by opening the WAV files in <a class="nounderline" href="https://www.audacityteam.org/" target="_blank" rel="noopener noreferrer">Audacity</a> and then exporting to MP3.
@@ -71,13 +73,12 @@ The songs here were produced by opening the WAV files in <a class="nounderline" 
 <div align="left" style="width: 686px;">
     <div align="center" style="width: 972px; position: relative; left: 50%; margin-left: -486px; top: 530px;">
     <span class="text">
-    <a href="quickstart.html" style="text-decoration:none;">Quick Start</a>&nbsp;&nbsp;&nbsp;
-    <a href="tutorial.html" style="text-decoration:none;"><b>Tutorial</b></a>&nbsp;&nbsp;&nbsp;
+    <a href="quickstart.html" style="text-decoration:none;"><b>Quick Start</b></a>&nbsp;&nbsp;&nbsp;
+    <a href="tutorial.html" style="text-decoration:none;">Tutorial</a>&nbsp;&nbsp;&nbsp;
     <a href="demonstration.html" style="text-decoration:none;">Demonstration</a>
 
     </span>
     </div>
 </div>
-
   </body>
 </html>
