Update Important Update Information.html

--- a/Important Update Information.html
+++ b/Important Update Information.html
@@ -2,16 +2,62 @@
 <html>
   <head>
     <meta content="text/html; charset=UTF-8" http-equiv="Content-Type">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title lang="en-gb">Audovia Update</title>
+        <link rel="stylesheet"
+		      href="https://fonts.googleapis.com/css?family=Open Sans">
+
+	    <link rel="stylesheet"
+		      href="https://fonts.googleapis.com/css?family=Ubuntu">
+    <style type="text/css">
+      body {background-color: #ffffff;}
+
+      h1 {color: #551A8B; font-family: Ubuntu; font-size: 40px; font-weight: normal; text-align: center;}
+      h2 {color: #551A8B; font-family: Ubuntu; font-size: 18px; font-weight: normal; text-align: center;}
+      h3 {color: #551A8B; font-family: Ubuntu; font-size: 18px; font-weight: normal; text-align: left;}
+      a:link {color: #551A8B;}
+      a:visited {color: #551A8B;}
+      a:active {color: #EE0000;}
+      a.nounderline {text-decoration:none; font-weight:bold;}
+      a.pdflink {text-decoration:none;}
+      span.composer {color: #817F73; font-family: Open Sans; font-size: 16px;}
+      span.song {color: #551A8B; cursor: pointer; font-family: Open Sans; font-size: 16px;}
+      span.caption {color: #551A8B;  font-family: Open Sans; font-size: 16px;}
+      span.part {color: #551A8B; cursor: pointer; font-family: Open Sans; font-size: 16px;}
+      span.text {color: #555555; font-family: Open Sans; font-size: 16px; line-height: 1.5;}
+      @media all and (max-width: 900px) {
+      .banner {
+      display: none;
+      }
+    </style>
   </head>
-  <body>
-    <p>
-      Thank you for downloading Audovia.&nbsp; We hope you have found it useful.&nbsp; A newer version, Audovia 4.0 (Audovia Classic), is now available from the <a href="https://snapcraft.io/audovia-classic"
-	          style="font-weight:bold;" target="_blank" rel="noopener noreferrer">Snap Store</a>.&nbsp; It can also be installed by using: sudo snap install audovia-classic.
-    </p>
-    <p>
-      Audovia Classic differs from Audovia in that the "home" interface is now used which means that files are read from and written to directories under: ~/Documents/Audovia/.&nbsp; You can migrate your files and database from Audovia to Audovia Classic by copying all the directories in: ~/snap/audovia/current/ to: ~/Documents/Audovia/.
-    </p>
+  <body style="margin: 0;">
+
+      <div style="width: 80%; background-color: #ffffff;  margin-left: -40%; position: relative; top: 50px; left: 50%;  border-width: 0px 0px 0px 0px; border-style: solid; border-color: white;">
+        <div>
+        <span class="text">
+
+            <p>
+		      Thank you for downloading Audovia.&nbsp; We hope you have found it useful.
+		    </p>
+		    <p>
+		      A newer version, Audovia 4.0 (Audovia Classic), is now available from the <a href="https://snapcraft.io/audovia-classic"
+			          style="font-weight:bold; text-decoration:none;" target="_blank" rel="noopener noreferrer">Snap Store</a>.
+		    </p>
+		    <p>
+			  It can also be installed by using: sudo snap install audovia-classic.
+		    </p>
+		    <p>
+		      Audovia Classic differs from Audovia in that the "home" interface is now used which means that files are read from and written to directories under: ~/Documents/Audovia/.
+		    </p>
+		    <p>
+		      You can migrate your files and database from Audovia to Audovia Classic by copying all the directories in: ~/snap/audovia/current/ to: ~/Documents/Audovia/.
+            </p>
+
+        </span>
+        </div>
+      </div>
+
   </body>
 </html>
 
