Update Important Update Information.html

--- a/Important Update Information.html
+++ b/Important Update Information.html
@@ -33,7 +33,23 @@
   </head>
   <body style="margin: 0;">
 
-      <div style="width: 80%; background-color: #ffffff;  margin-left: -40%; position: relative; top: 50px; left: 50%;  border-width: 0px 0px 0px 0px; border-style: solid; border-color: white;">
+
+    <div style="position: absolute; left: 50%; margin-left: -40%; top: 36px;">
+
+                <img title="Audovia Icon"
+				                alt="Audovia Icon" src="image/SongBuilderColourIcon74.png"
+                style="border: 0px solid;">
+    </div>
+
+  <div style="position: absolute; top: 0px; width: 60%; left: 50%; margin-left: -30%; height: 140px;">
+
+   <h1><strong>Important Information</strong></h1>
+
+
+ </div>
+
+
+      <div style="width: 80%; background-color: #ffffff;  margin-left: -40%; position: relative; top: 150px; left: 50%;  border-width: 0px 0px 0px 0px; border-style: solid; border-color: white;">
         <div>
         <span class="text">
 
