--- a/index.html
+++ b/index.html
@@ -174,6 +174,50 @@
 </div>
 
 <div class="small-menu">
+
+    <div style="width: 80%; margin: auto; margin-top: 50px;">
+                <img title="Audovia Icon" alt="Audovia Icon" src="image/SongBuilderColourIcon74.png"
+                style="border: 0px solid; margin-right: 20px; margin-top: 8px; margin-bottom: 0px; float: left;">
+      <div>
+      <h1 style="width:92%"><strong>Audovia</strong></h1>
+      </div>
+      <div style="margin-top: -10px;">
+      <h2 style="width:92%;"><em>Music Making for Classical Musicians</em></h2>
+      </div>
+    </div>
+
+    <div style="width: 80%; margin: auto;">
+
+      <div style="border-style: solid; border-color: #f4f4f4; border-width: 10px 0px 10px 20px; width: 450px; height: 350px; overflow: auto; margin-top: 0px; margin-bottom: 20px; margin-left: 0px; margin-right: 30px; float: left; background-color: #f4f4f4;">
+
+      <iframe style="border-style: none;" src="playlist.html" height="340" width="440"></iframe>
+
+      </div>
+
+
+<span class="text">
+
+      <p>
+	  <b>Audovia</b> is a music making application for classical musicians.&nbsp;
+	  Up to fifteen instrumental voices and a percussion track can be used.
+      </p
+
+	  <p>
+	  Click on one of the samples to play or pause and double-click to rewind.
+	  </p>
+
+</span>
+      <div align="center">
+      <span class="text"><em>
+          <br clear="all">
+          <br>
+      Copyright &copy; 2017 - 2021&nbsp;&nbsp; <a class="nounderline" href="https://songbase.github.io/mywebsite/" target="_blank" rel="noopener noreferrer">Donald G Gray</a></em><br><br>&nbsp;
+      </span>
+      </div>
+
+
+    </div>
+
 </div>
 
   </body>
