--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
       span.footer {color: #555555; font-family: Open Sans; font-size: 14px; line-height: 1.3;}
       span.text-black {color: #000000; font-family: Open Sans; font-size: 15px; line-height: 1.3;}
       span.text {color: #555555; font-family: Open Sans; font-size: 15px; line-height: 1.3;}
+      span.big-text {color: #555555; font-family: Open Sans; font-size: 16px; line-height: 1.5;}
       span.text-white {color: #ffffff; font-family: Open Sans; font-size: 15px; line-height: 1.3;}
       span.caption {color: #551A8B;  font-family: Open Sans; font-size: 16px;}
       li:not(:last-child) {margin-bottom: 8px;}
@@ -195,7 +196,7 @@
       </div>
 
 
-<span class="text">
+<span class="big-text">
 
       <p>
 	  <b>Audovia</b> is a music making application for classical musicians.&nbsp;
@@ -208,7 +209,7 @@
 
 </span>
       <div align="center">
-      <span class="text"><em>
+      <span class="big-text"><em>
           <br clear="all">
           <br>
       Copyright &copy; 2017 - 2021&nbsp;&nbsp; <a class="nounderline" href="https://songbase.github.io/mywebsite/" target="_blank" rel="noopener noreferrer">Donald G Gray</a></em><br><br>&nbsp;
