--- a/index.html
+++ b/index.html
@@ -207,6 +207,10 @@
 	  Click on one of the samples to play or pause and double-click to rewind.
 	  </p>
 
+	  <p>
+	  Access this site from your PC or laptop for more information and download links for Linux and Windows.
+	  </p>
+
 </span>
       <div align="center">
       <span class="big-text"><em>
