--- a/index.html
+++ b/index.html
@@ -182,6 +182,7 @@
       <div>
       <h1 style="width:92%"><strong>Audovia</strong></h1>
       </div>
+
       <div style="margin-top: -10px;">
       <h2 style="width:92%;"><em>Music Making for Classical Musicians</em></h2>
       </div>
@@ -189,8 +190,8 @@
 
     <div style="width: 80%; margin: auto;">
 
-      <div style="border-style: solid; border-color: #f4f4f4; border-width: 10px 0px 10px 20px; width: 450px; height: 350px; overflow: auto; margin-top: 0px; margin-bottom: 20px; margin-left: 0px; margin-right: 30px; float: left; background-color: #f4f4f4;">
-
+      <!--<div style="border-style: solid; border-color: #f4f4f4; border-width: 10px 0px 10px 20px; width: 450px; height: 350px; overflow: auto; margin-top: 0px; margin-bottom: 20px; margin-left: 0px; margin-right: 30px; float: left; background-color: #f4f4f4;">-->
+<div style="border-style: solid; border-color: #ffffff; border-width: 0px 20px 20px 0px; width: 430px; height: 340px;  float: left; background-color: #f4f4f4;">
       <iframe style="border-style: none;" src="playlist-mobile.html" height="340" width="440"></iframe>
 
       </div>
