--- a/index.html
+++ b/index.html
@@ -94,14 +94,14 @@
 	  </p>
 
           <!-- PayPal button -->
-	  	  <div style="position: absolute; left: 50%; margin-left: 130px; top: -325px;">
+	  	  <!--<div style="position: absolute; left: 50%; margin-left: 130px; top: -325px;">
 	  	  <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
 	  	  <input type="hidden" name="cmd" value="_s-xclick" />
 	  	  <input type="hidden" name="hosted_button_id" value="GVABA73MP8PCA" />
 	  	  <input type="image" src="https://www.paypalobjects.com/en_GB/i/btn/btn_donate_LG.gif" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button" />
 	  	  <img alt="" border="0" src="https://www.paypal.com/en_GB/i/scr/pixel.gif" width="1" height="1" />
 	  	  </form>
-	  	  </div>
+	  	  </div>-->
 
 	  <div align="center">
 	  <p style="margin-top: 6px; margin-bottom: 18px;">
