--- a/index.html
+++ b/index.html
@@ -141,8 +141,8 @@
 	      <span class="text"> <hr style="height:1px;border-width:0;color:grey;background-color:grey">
 	      <a href="https://www.facebook.com/audovia" style="text-decoration:none;" target="_blank" rel="noopener noreferrer"><b>Facebook Page</b></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 	      <a href="https://www.youtube.com/channel/UCzEo99Tp8H87jUdYh9acs5Q" style="text-decoration:none;" target="_blank" rel="noopener noreferrer"><b>YouTube Channel</b></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-<!--	      <a href="https://www.facebook.com/groups/pipetunes" style="text-decoration:none;" target="_blank" rel="noopener noreferrer">Audovia Documentation</a>&nbsp;&nbsp;&nbsp; -->
-	      <a href="https://songbase.github.io/doc/AudoviaDocumentation-4-0.pdf" style="text-decoration:none;" target="_blank" rel="noopener noreferrer"><b>Audovia Documentation</b></a>
+	      <a href="https://songbase.github.io/doc/AudoviaDocumentation-4-0.pdf" style="text-decoration:none;" target="_blank" rel="noopener noreferrer"><b>Documentation</b></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+	      <a href="https://github.com/SongBase/Audovia/discussions" style="text-decoration:none;" target="_blank" rel="noopener noreferrer"><b>Discussions</b></a>
 	      <hr style="height:1px;border-width:0;color:grey;background-color:grey">
           </span>
           </p>
@@ -167,7 +167,7 @@
 
 	            <br>
           <br>
-          Copyright &copy; 2017 - 2021&nbsp;&nbsp; <a class="nounderline" href="https://songbase.github.io/mywebsite/" target="_blank" rel="noopener noreferrer">Donald G Gray</a></em><br><br>&nbsp;
+          Copyright &copy; 2017 - 2022&nbsp;&nbsp; <a class="nounderline" href="https://songbase.github.io/mywebsite/" target="_blank" rel="noopener noreferrer">Donald G Gray</a></em><br><br>&nbsp;
       </span>
 
     </div>
@@ -217,10 +217,9 @@
       <span class="big-text"><em>
           <br clear="all">
           <br>
-      Copyright &copy; 2017 - 2021&nbsp;&nbsp; <a class="nounderline" href="https://songbase.github.io/mywebsite/" target="_blank" rel="noopener noreferrer">Donald G Gray</a></em><br><br>&nbsp;
+      Copyright &copy; 2017 - 2022&nbsp;&nbsp; <a class="nounderline" href="https://songbase.github.io/mywebsite/" target="_blank" rel="noopener noreferrer">Donald G Gray</a></em><br><br>&nbsp;
       </span>
       </div>
-
 
     </div>
 
