--- a/playlist.html
+++ b/playlist.html
@@ -23,7 +23,7 @@
 
   <body>
 
-  <div style="border-style: none; width: 420px; height: 320px; overflow: auto;">
+  <div style="border-style: none; width: 420px; height: 340px; overflow: auto;">
 
     <div id="playlist">
     </div>
@@ -41,6 +41,7 @@
     '{ "composer":"G F Handel"  , "song":"Arrival of the Queen of Sheba" , "mp3":"The Arrival of the Queen of Sheba-Song.mp3" } ,' +
     '{ "composer":"G F Handel"  , "song":"Messiah 1 Sinfony"             , "mp3":"Messiah 1 Sinfony-Song.mp3"                 } ,' +
     '{ "composer":"C Petzold"   , "song":"Minuet in G"                   , "mp3":"Minuet in G - Christian Petzold-Song.mp3"   } ,' +
+    '{ "composer":"R Rodgers"   , "song":"You\'ll Never Walk Alone"      , "mp3":"You\'ll Never Walk Alone-Song.mp3"          } ,' +
     '{ "composer":"C Nairne"    , "song":"The Hundred Pipers"            , "mp3":"The Hundred Pipers-Song.mp3"                } ,' +
     '{ "composer":"S Joplin"    , "song":"The Entertainer"               , "mp3":"The Entertainer.mp3"                        }  ' +
     ']}';
