--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
     <div style="position: absolute; left: 50%; margin-left: -494px; top: 352px;">
 
-      <iframe style="border-style: none;" src="playlist.html" height="340" width="440"></iframe>
+      <iframe style="border-style: none;" src="playlist.html" height="360" width="440"></iframe>
 
     </div>
 
@@ -86,8 +86,11 @@
 	<!--  <p style="margin-top: 0px; margin-bottom: 16px;"> -->
 	<p>
 	  <b>Audovia</b> is a music making application for classical musicians.&nbsp;
-	  Up to fifteen instrumental voices and a percussion track can be used.
-
+	  Up to fifteen instrumental voices and a percussion track can be used
+	  with instruments chosen from the default soundbank of 128 instruments
+	  or from any other soundbank of your choice.&nbsp;
+	  Songs can be developed, tested and edited very quickly and easily
+	  by virtue of the database structure and the JFugue MusicString notation.
 	  </p>
 	  <p style="margin-left: -20px; margin-bottom: 20px;">
 	  &larr; click on one of the samples to play or pause and double-click to rewind.
@@ -132,8 +135,8 @@
 	  Even <a class="nounderline" href="https://drive.google.com/drive/folders/1A1MdhX_gnX7xYDk90ybHfZzugBut22m4?usp=sharing" target="_blank" rel="noopener noreferrer">ringtones</a> for your mobile phone.
 	  </p>
 
-	  The quality of your music will depend on your choice of instrument for each voice and your choice of soundbank.
-	  </p>
+	  <!--The quality of your music will depend on your choice of instrument for each voice and your choice of soundbank.
+	  </p>-->
 
 
 	  <div align="center">
@@ -152,7 +155,7 @@
       </span>
     </div>
 
-<div style="width: 968px; margin: auto; position: absolute; top: 705px; left: 0px; right: 0px;">
+<div style="width: 968px; margin: auto; position: absolute; top: 725px; left: 0px; right: 0px;">
 
 <iframe style="border-style: none;" src="quickstart.html" height="620" width="972" name="myiframe">
 
@@ -160,7 +163,7 @@
 
 </div>
 
-    <div align="center" style="width: 968px; margin: auto; position: absolute; top: 1255px; left: 0px; right: 0px;">
+    <div align="center" style="width: 968px; margin: auto; position: absolute; top: 1275px; left: 0px; right: 0px;">
 
       <span class="footer">
       <em>
