--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 	  <div align="center">
 	  <p style="margin-top: 6px; margin-bottom: 18px;">
 
-	  <a href="https://snapcraft.io/audovia-classic"
+	  <a href="https://snapcraft.io/audovia-lite"
 	          style="text-decoration:none;" target="_blank" rel="noopener noreferrer">
 	       <button type="button" style="background-color:#e0e0e0; width:240px; padding:5px; cursor:pointer; color:#551A8B; margin-top: -6px;">
 	               <font style="font-family: Open Sans; font-size: 15px;"><b>Install Audovia on Linux</b>
