--- a/index.html
+++ b/index.html
@@ -143,8 +143,9 @@
 	  <div align="center">
 	      <p style="margin-top: 32px; margin-bottom: 18px;">
 	      <span class="text"> <hr style="height:1px;border-width:0;color:grey;background-color:grey">
-	      <a href="https://www.facebook.com/audovia" style="text-decoration:none;" target="_blank" rel="noopener noreferrer"><b>Facebook Page</b></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-	      <a href="https://www.youtube.com/channel/UCzEo99Tp8H87jUdYh9acs5Q" style="text-decoration:none;" target="_blank" rel="noopener noreferrer"><b>YouTube Channel</b></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+	      <a href="https://www.facebook.com/audovia" style="text-decoration:none;" target="_blank" rel="noopener noreferrer"><b>Facebook</b></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+	      <a href="https://www.youtube.com/channel/UCzEo99Tp8H87jUdYh9acs5Q" style="text-decoration:none;" target="_blank" rel="noopener noreferrer"><b>YouTube</b></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+	      <a href="https://twitter.com/AudoviaMusic" style="text-decoration:none;" target="_blank" rel="noopener noreferrer"><b>Twitter</b></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 	      <a href="https://songbase.github.io/doc/AudoviaDocumentation-4-0.pdf" style="text-decoration:none;" target="_blank" rel="noopener noreferrer"><b>Documentation</b></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 	      <a href="https://github.com/SongBase/Audovia/discussions" style="text-decoration:none;" target="_blank" rel="noopener noreferrer"><b>Discussions</b></a>
 	      <hr style="height:1px;border-width:0;color:grey;background-color:grey">
