--- a/demonstration.html
+++ b/demonstration.html
@@ -59,7 +59,7 @@ Songs are created using JFugue notation in the MusicString editor.
 Notes are specified by their name and octave, and their durations are specified either by a character code or by a numeric value.
 </p>
 <p>
-Notes can be entered manually or by picking from graphic Treble, Alto, Tenor and Bass staves within the MusicString editor.
+Notes can be entered manually or by picking from graphic Treble, Alto, Tenor and Bass staves within the popup editor.
 </p>
 <p>
 You can export songs to MIDI and WAV files for input to music processing and music publishing applications.
