--- a/tutorial.html
+++ b/tutorial.html
@@ -57,7 +57,7 @@ The video shows the song<br>"Joy to the World" being created from a template.
 The notes are specified by their name and octave, and their durations are specified either by a character code or by a numeric value.
 </p>
 <p>
-They are entered here by picking from the graphic Treble stave within the MusicString editor.
+They are entered here by picking from the graphic Treble stave within the popup editor.
 </p>
 <p>
 When complete, you can export songs to MIDI and WAV files for input to music processing and music publishing applications.
