--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       span.terminal {color: #555555; font-family: Cutive Mono; font-size: 15px;}
       span.footer {color: #555555; font-family: Open Sans; font-size: 14px; line-height: 1.3;}
       span.text-black {color: #000000; font-family: Open Sans; font-size: 15px; line-height: 1.3;}
-      span.text {color: #555555; font-family: Open Sans; font-size: 15px; line-height: 1.3;}
+      span.mytext {color: #555555; font-family: Open Sans; font-size: 15px; line-height: 1.3;}
       span.big-text {color: #555555; font-family: Open Sans; font-size: 16px; line-height: 1.5;}
       span.text-white {color: #ffffff; font-family: Open Sans; font-size: 15px; line-height: 1.3;}
       span.caption {color: #551A8B;  font-family: Open Sans; font-size: 16px;}
@@ -59,6 +59,98 @@
 	  .big-menu {display:block;}
 	  .small-menu {display:none;}
       }
+
+
+* {box-sizing: border-box}
+body {font-family: Verdana, sans-serif; margin:0}
+.mySlides {display: none}
+img {vertical-align: middle;}
+
+/* Slideshow container */
+.slideshow-container {
+  max-width: 700px;
+  position: relative;
+  margin: auto;
+}
+
+/* Next & previous buttons */
+.prev, .next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  padding: 16px;
+  margin-top: -22px;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+}
+
+/* Position the "next button" to the right */
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover, .next:hover {
+  background-color: rgba(0,0,0,0.8);
+}
+
+/* Caption text */
+.text {
+  color: #000000;
+  font-size: 15px;
+  padding: 8px 12px;
+  position: relative;
+  bottom: 8px;
+  width: 100%;
+  text-align: center;
+}
+
+/* Number text (1/3 etc) */
+.numbertext {
+  color: #000000;
+  font-size: 12px;
+  padding: 8px 12px;
+  position: relative;
+  top: 0;
+}
+
+/* The dots/bullets/indicators */
+.dot {
+  cursor: pointer;
+  height: 15px;
+  width: 15px;
+  margin: 0 2px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display: inline-block;
+  transition: background-color 0.6s ease;
+}
+
+.active, .dot:hover {
+  background-color: #717171;
+}
+
+/* Fading animation */
+.fade {
+  animation-name: fade;
+  animation-duration: 1.5s;
+}
+
+@keyframes fade {
+  from {opacity: .4}
+  to {opacity: 1}
+}
+
+/* On smaller screens, decrease text size */
+@media only screen and (max-width: 300px) {
+  .prev, .next,.text {font-size: 11px}
+}
 
     </style>
 
@@ -82,8 +174,8 @@
 
     </div>
 
-    <div style="width: 530px; background-color: #ffffff;  margin-left: -48px; position: absolute; top: 348px; left: 50%;  border: 8px solid white;">
-      <span class="text">
+    <div style="width: 550px; background-color: #ffffff;  margin-left: -48px; position: absolute; top: 348px; left: 50%;  border: 8px solid white;">
+      <span class="mytext">
 	<!--  <p style="margin-top: 0px; margin-bottom: 16px;"> -->
 	<p>
 	  <b>Audovia</b> is a music making application for classical musicians.&nbsp;
@@ -141,8 +233,8 @@
 
 
 	  <div align="center">
-	      <p style="margin-top: 32px; margin-bottom: 18px;">
-	      <span class="text"> <hr style="height:1px;border-width:0;color:grey;background-color:grey">
+	      <p style="margin-top: 40px; margin-bottom: 18px;">
+	      <span class="mytext"> <hr style="height:1px;border-width:0;color:grey;background-color:grey">
 	      <a href="https://www.facebook.com/audovia" style="text-decoration:none;" target="_blank" rel="noopener noreferrer"><b>Facebook</b></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 	      <a href="https://www.youtube.com/channel/UCzEo99Tp8H87jUdYh9acs5Q" style="text-decoration:none;" target="_blank" rel="noopener noreferrer"><b>YouTube</b></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 	      <a href="https://twitter.com/AudoviaMusic" style="text-decoration:none;" target="_blank" rel="noopener noreferrer"><b>Twitter</b></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -157,21 +249,119 @@
       </span>
     </div>
 
-<div style="width: 968px; margin: auto; position: absolute; top: 725px; left: 0px; right: 0px;">
+<!--<div style="width: 968px; margin: auto; position: absolute; top: 725px; left: 0px; right: 0px;">
 
 <iframe style="border-style: none;" src="quickstart.html" height="620" width="972" name="myiframe">
 
 </iframe>
 
+</div>-->
+
+
+<div class="slideshow-container" style="position: absolute; left: 50%; margin-left: -494px; top: 720px;">
+
+<div class="mySlides fade">
+  <div class="numbertext">1 / 4</div>
+  <img src="image/newSongs.png" style="width:100%">
+  <div class="text">Song Menu</div>
 </div>
 
-    <div align="center" style="width: 968px; margin: auto; position: absolute; top: 1275px; left: 0px; right: 0px;">
+<div class="mySlides fade">
+  <div class="numbertext">2 / 4</div>
+  <img src="image/newTree.png" style="width:100%">
+  <div class="text">Tree View</div>
+</div>
+
+<div class="mySlides fade">
+  <div class="numbertext">3 / 4</div>
+  <img src="image/newStrings.png" style="width:100%">
+  <div class="text">Strings Menu</div>
+</div>
+
+<div class="mySlides fade">
+  <div class="numbertext">4 / 4</div>
+  <img src="image/newCropBorder.png" style="width:100%">
+  <div class="text">Popup Editor</div>
+</div>
+
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+
+<!-- </div> -->
+<!-- <br> -->
+
+<div style="text-align:center">
+  <span class="dot" onclick="currentSlide(1)"></span>
+  <span class="dot" onclick="currentSlide(2)"></span>
+  <span class="dot" onclick="currentSlide(3)"></span>
+  <span class="dot" onclick="currentSlide(4)"></span>
+</div>
+
+</div>
+
+<script>
+let slideIndex = 1;
+showSlides(slideIndex);
+
+function plusSlides(n) {
+  showSlides(slideIndex += n);
+}
+
+function currentSlide(n) {
+  showSlides(slideIndex = n);
+}
+
+function showSlides(n) {
+  let i;
+  let slides = document.getElementsByClassName("mySlides");
+  let dots = document.getElementsByClassName("dot");
+  if (n > slides.length) {slideIndex = 1}
+  if (n < 1) {slideIndex = slides.length}
+  for (i = 0; i < slides.length; i++) {
+    slides[i].style.display = "none";
+  }
+  for (i = 0; i < dots.length; i++) {
+    dots[i].className = dots[i].className.replace(" active", "");
+  }
+  slides[slideIndex-1].style.display = "block";
+  dots[slideIndex-1].className += " active";
+}
+</script>
+
+
+
+    <div style="width: 250px; background-color: #ffffff;  margin-left: 230px; position: absolute; top: 746px; left: 50%;  border: 8px solid white;">
+      <span class="mytext">
+	<!--  <p style="margin-top: 0px; margin-bottom: 16px;"> -->
+<p>
+<!--<br>-->
+The slideshow starts by presenting a typical Song Menu and then the Tree View of a selected song.
+</p>
+<p>
+MusicStrings can be edited in the Strings Menu or within the Popup Editor.
+</p>
+<p>
+The notes are specified by their name and octave, and their durations are specified either by a character code or by a numeric value.
+</p>
+<p>
+Notes can be entered manually or by picking from graphic Treble, Alto, Tenor and Bass staves within the Popup Editor.
+</p>
+<p>
+You can export songs to MIDI and WAV files for input to music processing and music publishing applications.
+</p>
+<p>
+The songs here were produced by opening the WAV files in <a class="nounderline" href="https://www.audacityteam.org/" target="_blank" rel="noopener noreferrer">Audacity</a> and then exporting to MP3.
+</p>
+	  </span>
+	  </div>
+
+
+    <div align="center" style="width: 968px; margin: auto; position: absolute; top: 1400px; left: 0px; right: 0px;">
 
       <span class="footer">
       <em>
 
-	            <br>
-          <br>
+
           Copyright &copy; 2017 - 2022&nbsp;&nbsp; <a class="nounderline" href="https://songbase.github.io/mywebsite/" target="_blank" rel="noopener noreferrer">Donald G Gray</a></em><br><br>&nbsp;
       </span>
 
