--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@ MusicStrings can be edited in the Strings Menu or within the Popup Editor.
 The notes are specified by their name and octave, and their durations are specified either by a character code or by a numeric value.
 </p>
 <p>
-Notes can be entered manually or by picking from graphic Treble, Alto, Tenor and Bass staves within the Popup Editor.
+Within the Popup Editor notes can be entered manually or by picking from graphic Treble, Alto, Tenor and Bass staves.
 </p>
 <p>
 You can export songs to MIDI and WAV files for input to music processing and music publishing applications.
