take out ringtones ling

--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@ img {vertical-align: middle;}
 
 	 <p style="clear: both;">
 	  <b>Audovia</b> is great for making background music for videos or backing tracks for playing or singing along to.&nbsp;
-	  Even <a class="nounderline" href="https://drive.google.com/drive/folders/1A1MdhX_gnX7xYDk90ybHfZzugBut22m4?usp=sharing" target="_blank" rel="noopener noreferrer">ringtones</a> for your mobile phone.
+	  Even ringtones for your mobile phone.
 	  </p>
 
 	  <!--The quality of your music will depend on your choice of instrument for each voice and your choice of soundbank.
