--- a/index.html
+++ b/index.html
@@ -50,6 +50,8 @@
       li:not(:last-child) {margin-bottom: 8px;}
       p {margin-top: 0px; margin-bottom: 12px;}
 
+      .div-1 {background-color: #e8ccff;}
+
       .menu { display: flex; justify-content: space-around; }
       @media all and (max-width:900px) {
       .big-menu {display:none;}
@@ -159,22 +161,33 @@ img {vertical-align: middle;}
 
 <div class="big-menu">
 
-<div style="position: absolute; top: 0px; width: 100%; height: 140px;">
+<!--<div style="position: absolute; top: 0px; width: 100%; height: 140px;">
 
- </div>
+ </div>-->
 
-<div style="position: absolute; left: 50%; margin-left: -486px; top: 0px;">
-<img src="image/sm_Sydney_Opera_banner_scaled.png" alt="Sydney Opera House" height="324" width="972">
+<!--<div style="position: absolute; left: 50%; margin-left: -486px; top: 0px;">-->
+<!--<img src="image/sm_Sydney_Opera_banner_scaled.png" alt="Sydney Opera House" height="324" width="972">-->
+
+<div class="div-1" style="position: absolute; left: 50%; margin-left: -486px; top: 0px; height: 154px; width: 972px;">
+
+<img title="Audovia Icon" alt="Audovia Icon" src="image/SongBuilderColourIcon74.png"
+                style="border: 0px solid; margin-left: 30px; margin-right: 20px; margin-top: 30px; margin-bottom: 0px;">
+<div align="center" style="margin-top: -108px; margin-bottom: -14px;">
+<h1><strong>Audovia</strong></h1>
+</div
+<div align="center" style="margin-top: 0px;">
+<h2><em>Music Making for Classical Musicians</em></h2>
+</div>
 
 </div>
 
-    <div style="position: absolute; left: 50%; margin-left: -494px; top: 352px;">
+    <div style="position: absolute; left: 50%; margin-left: -494px; top: 182px;">
 
       <iframe style="border-style: none;" src="playlist.html" height="360" width="440"></iframe>
 
     </div>
 
-    <div style="width: 550px; background-color: #ffffff;  margin-left: -48px; position: absolute; top: 348px; left: 50%;  border: 8px solid white;">
+    <div style="width: 550px; background-color: #ffffff;  margin-left: -48px; position: absolute; top: 178px; left: 50%;  border: 8px solid white;">
       <span class="mytext">
 	<!--  <p style="margin-top: 0px; margin-bottom: 16px;"> -->
 	<p>
@@ -258,7 +271,7 @@ img {vertical-align: middle;}
 </div>-->
 
 
-<div class="slideshow-container" style="position: absolute; left: 50%; margin-left: -494px; top: 720px;">
+<div class="slideshow-container" style="position: absolute; left: 50%; margin-left: -494px; top: 550px;">
 
 <div class="mySlides fade">
   <div class="numbertext">1 / 4</div>
@@ -330,7 +343,7 @@ function showSlides(n) {
 
 
 
-    <div style="width: 250px; background-color: #ffffff;  margin-left: 230px; position: absolute; top: 746px; left: 50%;  border: 8px solid white;">
+    <div style="width: 250px; background-color: #ffffff;  margin-left: 230px; position: absolute; top: 576px; left: 50%;  border: 8px solid white;">
       <span class="mytext">
 	<!--  <p style="margin-top: 0px; margin-bottom: 16px;"> -->
 <p>
@@ -356,7 +369,7 @@ The songs here were produced by opening the WAV files in <a class="nounderline" 
 	  </div>
 
 
-    <div align="center" style="width: 968px; margin: auto; position: absolute; top: 1400px; left: 0px; right: 0px;">
+    <div align="center" style="width: 968px; margin: auto; position: absolute; top: 1230px; left: 0px; right: 0px;">
 
       <span class="footer">
       <em>
