--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@ img {vertical-align: middle;}
                 style="border: 0px solid; margin-left: 30px; margin-right: 20px; margin-top: 30px; margin-bottom: 0px;">
 <div align="center" style="margin-top: -108px; margin-bottom: -14px;">
 <h1><strong>Audovia</strong></h1>
-</div
+</div>
 <div align="center" style="margin-top: 0px;">
 <h2><em>Music Making for Classical Musicians</em></h2>
 </div>
