take out windows

--- a/index.html
+++ b/index.html
@@ -219,28 +219,31 @@ img {vertical-align: middle;}
 
 	  <a href="https://snapcraft.io/audovia-lite"
 	          style="text-decoration:none;" target="_blank" rel="noopener noreferrer">
-	       <button type="button" style="background-color:#e0e0e0; width:240px; padding:5px; cursor:pointer; color:#551A8B; margin-top: -6px;">
-	               <font style="font-family: Open Sans; font-size: 15px;"><b>Install Audovia on Linux</b>
+	       <button type="button" style="background-color:#e8ccff; width:300px; padding:5px; cursor:pointer; color:#551A8B;">
+	               <font style="font-family: Open Sans; font-size: 15px;"><b>Install Audovia 4.05 on Linux</b>
 	               </font>
 	       </button>
       </a>
 
-      &nbsp;&nbsp;&nbsp;&nbsp;
+      <!--&nbsp;&nbsp;&nbsp;&nbsp;
 	  <a href="https://github.com/SongBase/Audovia/releases/download/v4.01/Audovia-4-0-1.msi"
 	          style="text-decoration:none;" target="_blank" rel="noopener noreferrer">
 	       <button type="button" style="background-color:#e0e0e0; width:240px; padding:5px; cursor:pointer; color:#551A8B;">
 	               <font style="font-family: Open Sans; font-size: 15px;"><b>Install Audovia on Windows</b>
 	               </font>
 	       </button>
-      </a>
+      </a>-->
 
 	  </p>
 	  </div>
 
 
 	 <p style="clear: both;">
-	  <b>Audovia</b> is great for making background music for videos or backing tracks for playing or singing along to.&nbsp;
-	  Even ringtones for your mobile phone.
+	  <b>Audovia</b> is currently being developed on
+	  <a class="nounderline" href="https://ubuntu.com/desktop" target="_blank" rel="noopener noreferrer">Ubuntu</a>
+	  on the Oracle VM
+	  <a class="nounderline" href="https://www.virtualbox.org/" target="_blank" rel="noopener noreferrer">VirtualBox</a>
+	  virtual machine.
 	  </p>
 
 	  <!--The quality of your music will depend on your choice of instrument for each voice and your choice of soundbank.
