--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@ The songs here were produced by opening the WAV files in <a class="nounderline" 
 	  </p>
 
 	  <p>
-	  Access this site from your PC or laptop for more information and download links for Linux and Windows.
+	  Access this site from your PC or laptop for more information and installation instructions.
 	  </p>
 
 </span>
