--- a/index.html
+++ b/index.html
@@ -219,7 +219,8 @@ img {vertical-align: middle;}
 
 	  <a href="https://snapcraft.io/audovia-lite"
 	          style="text-decoration:none;" target="_blank" rel="noopener noreferrer">
-	       <button type="button" style="background-color:#e8ccff; width:300px; padding:5px; cursor:pointer; color:#551A8B;">
+	       <button type="button" style="background-color:#e8ccff; width:300px; padding:5px;
+	       border-style:outset; border-color:#dddddd; cursor:pointer; color:#551A8B;">
 	               <font style="font-family: Open Sans; font-size: 15px;"><b>Install Audovia 4.05 on Linux</b>
 	               </font>
 	       </button>
