--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@ img {vertical-align: middle;}
 
 <div class="mySlides fade">
   <div class="numbertext">1 / 4</div>
-  <img src="image/newSongs.png" style="width:100%">
+  <img src="image/newSongsScaled.png" style="width:100%">
   <div class="text">Song Menu</div>
 </div>
 
@@ -299,7 +299,7 @@ img {vertical-align: middle;}
 
 <div class="mySlides fade">
   <div class="numbertext">4 / 4</div>
-  <img src="image/newCropBorder.png" style="width:100%">
+  <img src="image/newCropBorderScaled.png" style="width:100%">
   <div class="text">Popup Editor</div>
 </div>
 
