--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       li:not(:last-child) {margin-bottom: 8px;}
       p {margin-top: 0px; margin-bottom: 12px;}
 
-      .div-1 {background-color: #e8ccff;}
+      .div-1 {background-color: #ffffff;}
 
       .menu { display: flex; justify-content: space-around; }
       @media all and (max-width:900px) {
@@ -170,10 +170,10 @@ img {vertical-align: middle;}
 <!--<div style="position: absolute; left: 50%; margin-left: -486px; top: 0px;">-->
 <!--<img src="image/sm_Sydney_Opera_banner_scaled.png" alt="Sydney Opera House" height="324" width="972">-->
 
-<div class="div-1" style="position: absolute; left: 50%; margin-left: -486px; top: 0px; height: 154px; width: 972px;">
+<div class="div-1" style="position: absolute; left: 50%; margin-left: -486px; top: 10px; height: 154px; width: 972px;">
 
 <img title="Audovia Icon" alt="Audovia Icon" src="image/SongBuilderColourIcon74.png"
-                style="border: 0px solid; margin-left: 30px; margin-right: 20px; margin-top: 30px; margin-bottom: 0px;">
+                style="border: 0px solid; margin-left: 0px; margin-right: 20px; margin-top: 40px; margin-bottom: 0px;">
 <div align="center" style="margin-top: -108px; margin-bottom: -14px;">
 <h1><strong>Audovia</strong></h1>
 </div>
