--- a/index.html
+++ b/index.html
@@ -200,8 +200,8 @@ img {vertical-align: middle;}
 	  Songs can be developed, tested and edited very quickly and easily
 	  by virtue of the database structure and the JFugue MusicString notation.
 	  </p>
-	  <p style="margin-left: -20px; margin-bottom: 20px;">
-	  &larr; click on one of the samples to play or pause and double-click to rewind.
+	  <p style="margin-bottom: 20px;">
+	  Click on one of the songs to play or pause and double-click to rewind.
 	  </p>
 
           <!-- PayPal button -->
@@ -254,9 +254,9 @@ img {vertical-align: middle;}
 	  <div align="center">
 	      <p style="margin-top: 40px; margin-bottom: 18px;">
 	      <span class="mytext"> <hr style="height:1px;border-width:0;color:grey;background-color:grey">
-	      <a href="https://www.facebook.com/audovia" style="text-decoration:none;" target="_blank" rel="noopener noreferrer"><b>Facebook</b></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+	      <!--<a href="https://www.facebook.com/audovia" style="text-decoration:none;" target="_blank" rel="noopener noreferrer"><b>Facebook</b></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;-->
 	      <a href="https://www.youtube.com/channel/UCzEo99Tp8H87jUdYh9acs5Q" style="text-decoration:none;" target="_blank" rel="noopener noreferrer"><b>YouTube</b></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-	      <a href="https://twitter.com/AudoviaMusic" style="text-decoration:none;" target="_blank" rel="noopener noreferrer"><b>Twitter</b></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+	      <!--<a href="https://twitter.com/AudoviaMusic" style="text-decoration:none;" target="_blank" rel="noopener noreferrer"><b>Twitter</b></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;-->
 	      <a href="https://songbase.github.io/doc/AudoviaDocumentation-4-0.pdf" style="text-decoration:none;" target="_blank" rel="noopener noreferrer"><b>Documentation</b></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 	      <a href="https://github.com/SongBase/Audovia/discussions" style="text-decoration:none;" target="_blank" rel="noopener noreferrer"><b>Discussions</b></a>
 	      <hr style="height:1px;border-width:0;color:grey;background-color:grey">
