--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@ The songs here were produced by opening the WAV files in <a class="nounderline" 
       </p>
 
 	  <p>
-	  Click on one of the samples to play or pause and double-click to rewind.
+	  Click on one of the songs to play or pause and double-click to rewind.
 	  </p>
 
 	  <p>
