--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@ img {vertical-align: middle;}
 	          style="text-decoration:none;" target="_blank" rel="noopener noreferrer">
 	       <button type="button" style="background-color:#e8ccff; width:300px; padding:5px;
 	       border-style:outset; border-color:#dddddd; cursor:pointer; color:#551A8B;">
-	               <font style="font-family: Open Sans; font-size: 15px;"><b>Install Audovia 4.05 on Linux</b>
+	               <font style="font-family: Open Sans; font-size: 15px;"><b>Install Audovia 4.06 on Linux</b>
 	               </font>
 	       </button>
       </a>
@@ -255,10 +255,13 @@ img {vertical-align: middle;}
 	      <p style="margin-top: 40px; margin-bottom: 18px;">
 	      <span class="mytext"> <hr style="height:1px;border-width:0;color:grey;background-color:grey">
 	      <!--<a href="https://www.facebook.com/audovia" style="text-decoration:none;" target="_blank" rel="noopener noreferrer"><b>Facebook</b></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;-->
-	      <a href="https://www.youtube.com/channel/UCzEo99Tp8H87jUdYh9acs5Q" style="text-decoration:none;" target="_blank" rel="noopener noreferrer"><b>YouTube</b></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-	      <!--<a href="https://twitter.com/AudoviaMusic" style="text-decoration:none;" target="_blank" rel="noopener noreferrer"><b>Twitter</b></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;-->
+	      Please subscribe to our
+	      <a href="https://www.youtube.com/channel/UCzEo99Tp8H87jUdYh9acs5Q" style="text-decoration:none;" target="_blank" rel="noopener noreferrer"><b>YouTube</b></a>
+	      channel.
+	      <!--&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+	      <a href="https://twitter.com/AudoviaMusic" style="text-decoration:none;" target="_blank" rel="noopener noreferrer"><b>Twitter</b></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 	      <a href="https://songbase.github.io/doc/AudoviaDocumentation-4-0.pdf" style="text-decoration:none;" target="_blank" rel="noopener noreferrer"><b>Documentation</b></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-	      <a href="https://github.com/SongBase/Audovia/discussions" style="text-decoration:none;" target="_blank" rel="noopener noreferrer"><b>Discussions</b></a>
+	      <a href="https://github.com/SongBase/Audovia/discussions" style="text-decoration:none;" target="_blank" rel="noopener noreferrer"><b>Discussions</b></a>-->
 	      <hr style="height:1px;border-width:0;color:grey;background-color:grey">
           </span>
           </p>
