--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@ img {vertical-align: middle;}
 	      <p style="margin-top: 40px; margin-bottom: 18px;">
 	      <span class="mytext"> <hr style="height:1px;border-width:0;color:grey;background-color:grey">
 	      <!--<a href="https://www.facebook.com/audovia" style="text-decoration:none;" target="_blank" rel="noopener noreferrer"><b>Facebook</b></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;-->
-	      Please subscribe to our
+	      Please subscribe to my
 	      <a href="https://www.youtube.com/channel/UCzEo99Tp8H87jUdYh9acs5Q" style="text-decoration:none;" target="_blank" rel="noopener noreferrer"><b>YouTube</b></a>
 	      channel.
 	      <!--&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
